Better support for null data values, added player head texture and game profile builder, updated everything